<resources>
    <string name="app_name">The Homy</string>
    <string name="let_s_get_started"><![CDATA[Let’s Get Started ->]]></string>
    <string name="register_account">Register Account</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="pincode">PINCODE</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="address_line_1">address line 1*</string>
    <string name="by_continuing_you_accept_our_privacy_policy_and_term_of_use">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="kitchen_king">Kitchen King</string>
    <string name="homy">HOMY</string>
    <string name="_9500">9500</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="please_select_start_date">Please Select Start Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="okk">OK</string>
    <string name="please_select_plan">Please Select Plan</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="half_yearly">Half-Yearly</string>
    <string name="yearly">Yearly</string>
    <string name="daily">Daily</string>
    <string name="no_of_person">No. of Person</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="show_details">show details</string>
    <string name="Continue">Continue</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="share">Share</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="help_center">Help Center</string>
    <string name="delete_account">Delete Account</string>
    <string name="about_us">About Us</string>
    <string name="starting_1099">Starting @ 1099</string>
    <string name="benefits">Benefits:</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_6_digit_code_sent_on">Please enter the 6-digit code sent on</string>
    <string name="notes">Notes</string>
</resources>