<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PlanPickerBottomSheetFragment">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/please_select_plan"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/PlanGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <RadioButton
            android:id="@+id/plan1"
            style="@style/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/plan2"
            style="@style/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/plan3"
            style="@style/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />

        <RadioButton
            android:id="@+id/plan4"
            style="@style/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/half_yearly" />

        <RadioButton
            android:id="@+id/plan5"
            style="@style/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yearly" />


    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PlanGroup">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/ok"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>