<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".Registration">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register_account"
                style="@style/Heading_text"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintEnd_toEndOf="@id/logo"
                tools:layout_editor_absoluteX="152dp" />

            <EditText
                android:id="@+id/user_Name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                style="@style/edit_text"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_name"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_text" />

            <EditText
                android:id="@+id/user_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                style="@style/edit_text"
                android:inputType="phone"
                android:hint="@string/phone_number"
                app:layout_constraintEnd_toEndOf="@id/user_Name"
                app:layout_constraintStart_toStartOf="@id/user_Name"
                app:layout_constraintTop_toBottomOf="@+id/user_Name" />

            <EditText
                android:id="@+id/user_Email"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                style="@style/edit_text"
                android:hint="@string/email_id"
                app:layout_constraintEnd_toEndOf="@id/user_phoneNumber"
                app:layout_constraintStart_toStartOf="@id/user_phoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/user_phoneNumber" />

            <EditText
                android:id="@+id/user_Address"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:inputType="textPostalAddress"
                style="@style/edit_text"
                android:hint="@string/address_line_1"
                app:layout_constraintEnd_toEndOf="@id/user_Email"
                app:layout_constraintStart_toStartOf="@id/user_Email"
                app:layout_constraintTop_toBottomOf="@+id/user_Email" />

            <LinearLayout
                android:id="@+id/LL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/user_Address"
                app:layout_constraintStart_toStartOf="@id/user_Address"
                app:layout_constraintTop_toBottomOf="@+id/user_Address" >

                <EditText
                    android:id="@+id/user_City"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    style="@style/edit_text"
                    android:hint="@string/city" />

                <EditText
                    android:id="@+id/user_Pincode"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:inputType="number"
                    style="@style/edit_text"
                    android:hint="@string/pincode" />

            </LinearLayout>


            <EditText
                android:id="@+id/user_State"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                style="@style/edit_text"
                android:hint="@string/state"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/LL"
                app:layout_constraintStart_toStartOf="@id/LL"
                app:layout_constraintTop_toBottomOf="@+id/LL" />

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/user_State"
                app:layout_constraintStart_toStartOf="@+id/user_State"
                app:layout_constraintEnd_toEndOf="@+id/user_State">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/user_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
                    android:buttonTint="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/user_State"
                    app:layout_constraintTop_toBottomOf="@+id/user_State"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="10sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="#7B7B7B"
                    android:gravity="center"
                    android:text="@string/by_continuing_you_accept_our_privacy_policy_and_term_of_use"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"
                style="@style/Signup_btn"
                app:layout_constraintStart_toStartOf="@+id/LL1"
                app:layout_constraintEnd_toEndOf="@+id/LL1"
                app:layout_constraintTop_toBottomOf="@+id/LL1"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/Signup_btn"
                app:layout_constraintStart_toStartOf="@id/Signup_btn"
                app:layout_constraintEnd_toEndOf="@+id/Signup_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="#7B7B7B"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/already_have_an_account"/>
                <TextView
                    android:id="@+id/Login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="11sp"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_semibold"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>