<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Profile">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/red_light"
                app:cardElevation="8dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/profileText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:background="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/profileText"
                        app:layout_constraintStart_toStartOf="@+id/profileText"
                        app:layout_constraintTop_toBottomOf="@+id/profileText" />

                    <ImageView
                        android:id="@+id/UserProfilePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/profilepic"
                        app:layout_constraintTop_toBottomOf="@id/profileText"
                        app:layout_constraintStart_toStartOf="@id/profileText"
                        app:layout_constraintEnd_toEndOf="@id/profileText"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/UserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Shagun Chahar"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="@id/UserProfilePhoto"
                        app:layout_constraintEnd_toEndOf="@id/UserProfilePhoto"
                        app:layout_constraintTop_toBottomOf="@id/UserProfilePhoto"/>

                    <TextView
                        android:id="@+id/UserPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="87916125709"
                        android:textColor="@color/white"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="@id/UserName"
                        app:layout_constraintEnd_toEndOf="@id/UserName"
                        app:layout_constraintTop_toBottomOf="@id/UserName"/>

                    <TextView
                        android:id="@+id/UserLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Noida"
                        android:textColor="@color/white"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="17sp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/UserPhoneNumber"
                        app:layout_constraintEnd_toEndOf="@id/UserPhoneNumber"
                        app:layout_constraintTop_toBottomOf="@id/UserPhoneNumber"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="43dp"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/Calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/calendar_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/Share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/share_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/RateAndReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_and_review"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/rate_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/HelpCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/help_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/LogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/logout_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/DeleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/delete_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"/>
                <TextView
                    android:id="@+id/AboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableStartCompat="@drawable/aboutus_icon"
                    android:drawablePadding="30dp"
                    android:textSize="16sp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout >